--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "test": "NODE_ENV=test jest --runInBand"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/supertest": "^2.0.12",
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -18,6 +21,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.31",
